data/all_generated_tests/raw_wast_tests/br_table_ImproperFunctionCallorReturnHandling_2396.wast
;; 6. **Test 6: Mismatched Type Function Call**    - Description: Simulate a function call with mismatched types prior to a `br_table` branch to test if the system catches type mismatches properly and avoids traps.    - Constraint Checked: Strict type checking and function call validation before branching.    - Improper Function Call or Return Handling: Ensuring type consistency in function calls to avoid improper branching.

(assert_invalid
  (module
    (func
      (block (result i32)
        (i64.const 42)
        (call 0)
        (br_table 0 1 (i32.const 0))
      )
    )
  )
  "type mismatch"
)